Fight funktioniert aber ist hässlich